fix view dashboard link on tablet

--- a/client/src/dashboard/styles/dashboard/_card.scss
+++ b/client/src/dashboard/styles/dashboard/_card.scss
@@ -43,7 +43,7 @@
       display: inline;
       width: 126px;
 
-      @media screen and (min-width: $screen-md) {
+      @media screen and (min-width: $screen-md + 1) {
         position: absolute;
         bottom: 24px;
       }
